Added role verification and admin register