@@ -72,19 +72,29 @@ public class User implements UserDetails {
      * @name: User
      * @description: This method is used to create a user with the given parameters
      */
-    public User(String email, String password, String username) {
+    public User(String username, String email, String password) {
         super();
         this.username = username;
         this.email = email;
         this.password = password;
+        this.admin = 0;
+    }
+
+    public static User createAdmin(String username, String email, String password) {
+        User user = new User(username, email, password);
+        user.admin = 1;
+        return user;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        List<GrantedAuthority> authorities = Arrays.asList(
-                new SimpleGrantedAuthority("ROLE_USER"),
-                new SimpleGrantedAuthority("ROLE_ADMIN")
-        );
+        List<GrantedAuthority> authorities = null;
+
+        if (this.admin == 1)
+            authorities = List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        else
+            authorities = List.of(new SimpleGrantedAuthority("ROLE_USER"));
+
         return authorities;
     }
 
